# faking-with-families

./: readme.md
demo/: demo.cabal
demo/test/: Fake.hs  Main.hs
